--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=9090
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=6200
 
 #hibernate property
 
